objects/OM_Other_Product__c.object
<CustomObject>
    <description>OM Other Product for Add Product Functionality</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OMOther__c</fullName>
        <label>OM Other</label>
        <referenceTo>OM_Other__c</referenceTo>
        <relationshipLabel>OM Other Products</relationshipLabel>
        <relationshipName>OM_Other_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Number__c</fullName>
        <label>Product Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>OM Other Product</label>
    <nameField>
        <label>OM Other Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OM Other Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>